Added app title to list page, added app icon

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "io.ionic.starter",
-	"appName": "libraryApp",
+	"appName": "Readcursive",
 	"webDir": "www",
 	"bundledWebRuntime": false
 }
